--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <HTML>
 	<HEAD>
 		<script src="jquery-2.1.4.js" type="text/javascript"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
 		<script src="pig.js" type="text/javascript"></script>
+		<script src="index.js" type="text/javascript"></script>	
+		<script type="x/mustache" id="addPlayerTemplate">
+		    Player {{ n }}:<br />
+		    <input type="text" name="player{{n}}" class="players" /><br />
+		</script>
+		<script type="x/mustache" id="gameTemplate">
+			Win Score: {{ winScore }}<br />
+			Turns Remaining: {{ remaining }} <br />
+			Turn Score: {{ turnScore }} <br />
+		</script>
+		<script type="x/mustache" id="scoreboardTemplate">
+		</script>
+		<script type="x/mustache" id="playTemplate">
+		</script>		
+		<script type="x/mustache" id="controlsTemplate">
+		</script>
 	</HEAD>
 	<BODY>
 		<h1>JAVASCRIPT PIG</h1>
+		<div id='game'>
+			
+		</div>
+		<div id='scoreboard'>
+			
+		</div>
+		<div id='play'>
+			
+		</div>
+		<div id='controls'>
+			
+		</div>
+
+		<div>
+			<form>
+			    <input type="number" name="winScore" placeholder="Win Score" />
+			    <input type="number" name="turnCount" placeholder="Max Turns" /><br />
+			    Player 1:<br />
+			    <input type="text" name="player1" class="players" /><br />
+			    Player 2:<br />
+			    <input type="text" name="player2" class="players" /><br />
+			    <button type="button" id="addPlayer">Add Player</button>
+			    <button type="submit">Start</button>
+			</form>
+		</div>
 	</BODY>
 </HTML>
