webpage has been started

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 			
 		</div>
 		<div id='controls' class='area'>
-
+			<ul>
+				<li><button id="roll">Roll</button></li>
+				<li><button id="end">End Turn</button></li>
+				<li><button id="drop">Drop Player</button></li>
+			</ul>
 		</div>
 		<div id='play' class='area'>
 			
