--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
 	<HEAD>
 		<title>JavaScript Pig</title>
+		<link rel="shortcut icon" href="images/favicon.png">
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<script src="jquery-2.1.4.js" type="text/javascript"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
@@ -16,10 +17,35 @@
 			Turn Score: {{ turnScore }} <br />
 		</script>
 		<script type="x/mustache" id="scoreboardTemplate">
-			<div class="player">{{ name }}<br />{{ score }}</div>
+			<div class="player" id={{ name }}>{{ name }}<br />{{ score }}</div>
 		</script>
 	</HEAD>
 	<BODY>
+		<div class="hidden">
+			<script type="text/javascript">
+				<!--//--><![CDATA[//><!--
+
+					if (document.images) {
+						img1 = new Image();
+						img2 = new Image();
+						img3 = new Image();
+						img4 = new Image();
+						img5 = new Image();
+						img6 = new Image();
+						img7 = new Image();
+
+						img1.src = "images/1.png";
+						img2.src = "images/2.png";
+						img3.src = "images/3.png";
+						img4.src = "images/4.png";
+						img5.src = "images/5.png";
+						img6.src = "images/6.png";
+						img7.src = "images/trophy.png";
+					}
+
+				//--><!]]>
+			</script>
+		</div>
 		<div id='main'>
 			<h1>JavaScript Pig</h1>
 			<div id='chat' class='area'>
@@ -31,12 +57,16 @@
 				</div>
 			</div>
 			<div id='play' class='area'>
-				
+				<div class="dice" id="die1"></div>
+				<div class="dice" id="die2"></div>
+				<h2 class="status1"></h2>
+				<h2 class="status2"></h2>		
 			</div>
 			<div id='controls' class='area'>
 				<button id="roll">Roll</button>
 				<button id="end">End Turn</button>
 				<button id="drop">Drop Player</button>
+				<button id="help">Help</button>
 			</div>
 			<div>
 				<form>
