dice and status messages display

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 				</div>
 			</div>
 			<div id='play' class='area'>
-				<div class="dice" id="die1"></div>
-				<div class="dice" id="die2"></div>
-				<h2 class="status1"></h2>
-				<h2 class="status2"></h2>		
+				<img class="dice" id="die1" src=""></img>
+				<img class="dice" id="die2" src=""></!img>
+				<h2 class="status" id="status1"></h2>
+				<h2 class="status" id="status2"></h2>		
 			</div>
 			<div id='controls' class='area'>
 				<button id="roll">Roll</button>
